--- a/_sass/_photos.scss
+++ b/_sass/_photos.scss
@@ -23,7 +23,7 @@
 }
 
 .modal {
-  z-index: 2;
+  z-index: 10;
   position: fixed;
   top: 0;
   bottom: 0;
